# chatbot-ITK

./: .gitignore  README.md  indexing.py  main.py  pyproject.toml
config/: chroma.py  embedding.py  llm.py
notebook/: experimentation.ipynb
routers/: chats.py  documents.py
