[project]
name = "chatbot-itk"
version = "0.1.0"
description = ""
authors = [
    {name = "muhammadsaman77",email = "samanmuhammad077@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "langchain-text-splitters (==0.3.8)",
    "langchain-huggingface (==0.1.2)",
    "langchain-community (>=0.3.21,<0.4.0)",
    "langchain-chroma (>=0.2.3,<0.3.0)",
    "langchain-ollama (>=0.3.2,<0.4.0)",
    "pymupdf (>=1.25.5,<2.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

